Fix Spacing

--- a/source/content.css
+++ b/source/content.css
@@ -122,14 +122,18 @@
 .toolbar-group:last-child {
 	display: inline-block;
 }
-./* Hide Specific toolbar items*/
-.toolbar-group .toolbar-item[data-prefix="@"], .toolbar-item[data-prefix="#"], .toolbar-group:first-child, .toolbar-item[data-prefix="`"] {
+/* Hide Specific toolbar items */
+.toolbar-group .toolbar-item[data-prefix="@"],
+.toolbar-item[data-prefix="#"],
+.toolbar-group:first-child,
+.toolbar-item[data-prefix="`"] {
 	display: none;
-	}
-/*Add Some Spacing*/
-.js-saved-reply-container, .toolbar-item[data-prefix="- "]{
+}
+/* Add Some Spacing */
+.js-saved-reply-container,
+.toolbar-item[data-prefix="- "] {
 	padding-left: 15px !important;
-	}
+}
 
 .toolbar-commenting {
 	margin-top: 4px;
